samples/_failures_safe/1761717007_100049_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4872bbb3.c: In function ‘main’:
./samples/SAFE/__tmp_4872bbb3.c:160:16: error: missing terminating " character
  160 |         printf("%-12s %-15
      |                ^~~~~~~~~~~
./samples/SAFE/__tmp_4872bbb3.c:160:9: error: expected expression at end of input
  160 |         printf("%-12s %-15
      |         ^~~~~~
./samples/SAFE/__tmp_4872bbb3.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4872bbb3.c:160:9: error: expected declaration or statement at end of input
